# Kedro_Model1

./: README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters_data_engineering.yml  parameters_training.yml
src/iris_project/: settings.py
src/iris_project/pipelines/data_engineering/: nodes.py  pipeline.py
src/iris_project/pipelines/training/: __init__.py  nodes.py  pipeline.py
src/tests/pipelines/training/: test_pipeline.py
